tests/NormalTests/paczka1/fuzzy1/61639999.err
Error in line 1: A391 A603 65,8
Error in line 2: A391 A54 61,6
Error in line 19: wTYF7hTMzX A54 67,4
Error in line 20: A391 A391 7,3
Error in line 21: wTYF7hTMzX A768 44,8
Error in line 32: kglz A391 38,8
Error in line 33: kglz A54 24,8
Error in line 34: kglz A603 7,3
